# workshop_estrutura

./: .gitignore  README.md  main.py  main_2.py  pyproject.toml
